# x11-handmade-hero

./: .clangd  CMakeLists.txt  Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.hpp  Obj.cpp  Obj.h  Point.h  README.md  Renderer.cpp  Renderer.h  Shader.h  TGAFile.cpp  TGAFile.hpp  Util.cpp  Util.h  X11Display.cpp  X11Display.hpp  X11Window.cpp  X11Window.hpp  life.cpp  main.cpp  render.cpp  tga.cpp  tiny.cpp
